Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -352,7 +352,7 @@ footer span {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 691px;
+  width: 70%;
 }
 
 .widget.extendednavigation a.pull {
@@ -360,7 +360,6 @@ footer span {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0;
   padding: 30px 0;
 }
